# capstone_ws

src/: .rosinstall
src/bringup/: package.xml
src/bringup/launch/: real.launch  sim.launch  test_first.launch  test_second.launch
src/landing_site_detection/: CMakeLists.txt  package.xml
src/landing_site_detection/cfg/: LSD.cfg
src/landing_site_detection/include/landing_site_detection/: landing_site_detection.h
src/landing_site_detection/launch/: capstone.launch  test.launch
src/landing_site_detection/scripts/: centerpoint.py
src/landing_site_detection/src/: landing_site_detection.cpp
src/nav_scripts/: CMakeLists.txt  package.xml
src/nav_scripts/action/: Navigator.action
src/nav_scripts/cfg/: debug_console.conf  std_console.conf
src/nav_scripts/missions/: debug_mission.yaml
src/nav_scripts/scripts/: capstone_real.py  capstone_sim.py  make_squares_east_left.py  mission_selector.py
src/nav_scripts/srv/: Basetasks.srv
src/pointcloud_republish/: CMakeLists.txt  package.xml
src/pointcloud_republish/include/pointcloud_republish/: pointcloud_republish_node.h
src/pointcloud_republish/launch/: capstone.launch  capstone_sim.launch
src/pointcloud_republish/src/: pointcloud_republish_node.cpp
src/tf_scripts/: CMakeLists.txt  package.xml
src/tf_scripts/scripts/: fake_tf.py  odom_to_pose.py  robot_tf.py  tf_pub.py  tf_pub_sim.py
